SB 2.7.15, SF 7.0.5 현행화 적용 중.
- SB 2.7.15, SF 7.0.5: 완료
- Jackson 3.0 적용 중