@@ -26,13 +26,13 @@
 
 package open.commons.spring.web.authority.metadata;
 
-import java.lang.reflect.AccessibleObject;
 import java.lang.reflect.Field;
 import java.lang.reflect.Method;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
@@ -82,10 +82,10 @@ public class AuthorizedMetadataBuilder {
          * 1개의 {@link AuthorizedObjectMetadata}를 생성하는 빌더를 제공합니다. <br>
          * 
          * <pre>
-         * [개정이력]
-         *      날짜        | 작성자    |    내용
-         * ------------------------------------------
-         * 2025. 6. 20.        parkjunhong77@gmail.com            최초 작성
+        * [개정이력]
+        *     날짜        | 작성자                   |   내용
+        * -----------------------------------------------------
+         * 2025. 6. 20.    parkjunhong77@gmail.com     최초 작성
          * </pre>
          *
          * @return
@@ -100,10 +100,10 @@ public class AuthorizedMetadataBuilder {
          * <br>
          * 
          * <pre>
-         * [개정이력]
-         *      날짜        | 작성자    |    내용
-         * ------------------------------------------
-         * 2025. 6. 20.        parkjunhong77@gmail.com            최초 작성
+        * [개정이력]
+        *     날짜        | 작성자                   |   내용
+        * -----------------------------------------------------
+         * 2025. 6. 20.    parkjunhong77@gmail.com     최초 작성
          * </pre>
          *
          * @return
@@ -129,21 +129,15 @@ public class AuthorizedMetadataBuilder {
             return new ObjectsBuilderImpl();
         }
 
-        private static boolean allowAccess(AccessibleObject o) {
-            boolean accessible = o.isAccessible();
-            o.setAccessible(true);
-            return accessible;
-        }
-
         /**
          * 
          * <br>
          * 
          * <pre>
-         * [개정이력]
-         *      날짜        | 작성자    |    내용
-         * ------------------------------------------
-         * 2025. 6. 20.        parkjunhong77@gmail.com            최초 작성
+        * [개정이력]
+        *     날짜        | 작성자                   |   내용
+        * -----------------------------------------------------
+         * 2025. 6. 20.    parkjunhong77@gmail.com     최초 작성
          * </pre>
          *
          * @param targetClass
@@ -161,10 +155,11 @@ public class AuthorizedMetadataBuilder {
          * <br>
          * 
          * <pre>
-         * [개정이력]
-         *      날짜        | 작성자    |    내용
-         * ------------------------------------------
-         * 2025. 6. 19.        parkjunhong77@gmail.com            최초 작성
+        * [개정이력]
+        *     날짜        | 작성자                   |   내용
+        * -----------------------------------------------------
+         * 2025. 6. 19.    parkjunhong77@gmail.com     최초 작성
+         * 2026. 4. 14.    parkjunhong77@gmail.com     JDK 25 현행화 (canAccess 및 trySetAccessible 적용, 무의미한 targetField 접근제어 로직 제거)
          * </pre>
          * 
          * @param targetClass
@@ -180,50 +175,44 @@ public class AuthorizedMetadataBuilder {
          */
         private static <T> T newObject(Class<T> targetClass, Object builder, Map<String, Function<Object, Object>> postprocessors) {
             T newObject = null;
-            Boolean targetFieldAccessible = null;
-            String targetFieldName = null;
             Method targetMethod = null;
 
             Class<?> builderClass = builder.getClass();
             Field builderField = null;
-            Boolean builderFieldAccessible = null;
             Object value = null;
+
             try {
-                newObject = targetClass.newInstance();
+                newObject = targetClass.getDeclaredConstructor().newInstance();
+
                 for (Field targetField : targetClass.getDeclaredFields()) {
-                    try {
-                        // #1. 대상 클래스 필드 접근 허용
-                        targetFieldAccessible = allowAccess(targetField);
-                        // #2. builder 객체에서 동일한 이름의 필드 정보 조회
-                        builderField = ClassInspector.getDeclaredFieldIfExist(builderClass, targetFieldName = targetField.getName());
-                        if (builderField == null) {
-                            continue;
-                        }
+                    String targetFieldName = targetField.getName();
 
-                        builderFieldAccessible = allowAccess(builderField);
-                        value = builderField.get(builder);
-                        // builderField.get(builder) 후처리
-                        if (postprocessors != null && postprocessors.containsKey(targetFieldName)) {
-                            value = postprocessors.get(builderField.getName()).apply(value);
-                        }
-
-                        if (value == null) {
-                            continue;
-                        }
-
-                        targetMethod = targetClass.getMethod(String.join("", "set", StringUtils.toUpperCase(targetFieldName, 0)), targetField.getType());
-                        targetMethod.invoke(newObject, value);
-                    } finally {
-                        if (targetFieldAccessible != null && targetField != null) {
-                            targetField.setAccessible(targetFieldAccessible);
-                        }
-                        if (builderFieldAccessible != null && builderField != null) {
-                            builderField.setAccessible(builderFieldAccessible);
-                        }
-
-                        targetFieldAccessible = null;
-                        builderFieldAccessible = null;
+                    // #1. builder 객체에서 동일한 이름의 필드 정보 조회
+                    builderField = ClassInspector.getDeclaredFieldIfExist(builderClass, targetFieldName);
+                    if (builderField == null) {
+                        continue;
                     }
+
+                    // #2. [JDK 25 표준] builderField 접근 가능 여부 확인 및 안전한 해제
+                    if (!builderField.canAccess(builder)) {
+                        // setAccessible(true) 대신 모듈 시스템에서 안전한 trySetAccessible() 사용
+                        builderField.trySetAccessible();
+                    }
+
+                    value = builderField.get(builder);
+
+                    // #3. builderField.get(builder) 후처리
+                    if (postprocessors != null && postprocessors.containsKey(targetFieldName)) {
+                        value = postprocessors.get(targetFieldName).apply(value);
+                    }
+
+                    if (value == null) {
+                        continue;
+                    }
+
+                    // #4. 대상 객체의 Setter 메소드 호출
+                    targetMethod = targetClass.getMethod(String.join("", "set", StringUtils.toUpperCase(targetFieldName, 0)), targetField.getType());
+                    targetMethod.invoke(newObject, value);
                 }
             } catch (Exception e) {
                 String errMsg = String.format("데이터 처리 도중 오류가 발생하였습니다. target.class=%s, target.method=%s, target.object=%s / builder.class=%s, builder.field=%s, builder.object=%s" //
@@ -254,14 +243,20 @@ public class AuthorizedMetadataBuilder {
             }
 
             public void fieldHandleBean(String fieldHandleBean) {
+                Objects.requireNonNull(fieldHandleBean);
+
                 this.fieldHandleBean = fieldHandleBean;
             }
 
             public void handleType(String handleType) {
+                Objects.requireNonNull(handleType);
+
                 this.handleType = handleType;
             }
 
             public void name(String name) {
+                Objects.requireNonNull(name);
+
                 this.name = name;
             }
         }
@@ -281,6 +276,8 @@ public class AuthorizedMetadataBuilder {
             private List<FieldBuilder> fields;
 
             public void authorityBean(String authorityBean) {
+                Objects.requireNonNull(authorityBean);
+
                 this.authorityBean = authorityBean;
             }
 
@@ -289,14 +286,20 @@ public class AuthorizedMetadataBuilder {
             }
 
             public void fieldHandleBean(String fieldHandleBean) {
+                Objects.requireNonNull(fieldHandleBean);
+
                 this.fieldHandleBean = fieldHandleBean;
             }
 
             public void fields(List<FieldBuilder> fields) {
+                Objects.requireNonNull(fields);
+
                 this.fields = fields;
             }
 
             public void type(Class<?> type) {
+                Objects.requireNonNull(type);
+
                 this.type = type;
             }
         }
@@ -363,6 +366,8 @@ public class AuthorizedMetadataBuilder {
 
             @Override
             public ObjectBuilder field(Function<FieldBuilder, FieldBuilder> consumer) {
+                Objects.requireNonNull(consumer);
+
                 FieldBuilderImpl builder = new FieldBuilderImpl();
                 fields.add(consumer.apply(builder));
                 return this;
@@ -406,6 +411,8 @@ public class AuthorizedMetadataBuilder {
              */
             @Override
             public ObjectsBuilder object(Function<ObjectBuilder, ObjectBuilder> consumer) {
+                Objects.requireNonNull(consumer);
+
                 ObjectBuilder builder = new ObjectBuilderImpl();
                 objects.add(consumer.apply(builder));
                 return this;
@@ -421,10 +428,10 @@ public class AuthorizedMetadataBuilder {
          * {@link AuthorizedField#authorityBean()}에 해당하는 값을 설정합니다.
          * 
          * <pre>
-         * [개정이력]
-         *      날짜        | 작성자    |    내용
-         * ------------------------------------------
-         * 2025. 6. 18.        parkjunhong77@gmail.com            최초 작성
+        * [개정이력]
+        *     날짜        | 작성자                   |   내용
+        * -----------------------------------------------------
+         * 2025. 6. 18.    parkjunhong77@gmail.com     최초 작성
          * </pre>
          *
          * @param authorityBean
@@ -442,10 +449,10 @@ public class AuthorizedMetadataBuilder {
          * {@link AuthorizedFieldMetadata} 객체를 생성합니다. <br>
          * 
          * <pre>
-         * [개정이력]
-         *      날짜        | 작성자    |    내용
-         * ------------------------------------------
-         * 2025. 6. 18.        parkjunhong77@gmail.com            최초 작성
+        * [개정이력]
+        *     날짜        | 작성자                   |   내용
+        * -----------------------------------------------------
+         * 2025. 6. 18.    parkjunhong77@gmail.com     최초 작성
          * </pre>
          *
          * @return
@@ -459,10 +466,10 @@ public class AuthorizedMetadataBuilder {
          * {@link AuthorizedField#fieldHandleBean()}에 해당하는 값을 설정합니다.
          * 
          * <pre>
-         * [개정이력]
-         *      날짜        | 작성자    |    내용
-         * ------------------------------------------
-         * 2025. 6. 18.        parkjunhong77@gmail.com            최초 작성
+        * [개정이력]
+        *     날짜        | 작성자                   |   내용
+        * -----------------------------------------------------
+         * 2025. 6. 18.    parkjunhong77@gmail.com     최초 작성
          * </pre>
          *
          * @param fieldHandleBean
@@ -478,10 +485,10 @@ public class AuthorizedMetadataBuilder {
          * {@link AuthorizedField#handleType()}에 해당하는 값을 설정합니다.<br>
          * 
          * <pre>
-         * [개정이력]
-         *      날짜        | 작성자    |    내용
-         * ------------------------------------------
-         * 2025. 6. 18.        parkjunhong77@gmail.com            최초 작성
+        * [개정이력]
+        *     날짜        | 작성자                   |   내용
+        * -----------------------------------------------------
+         * 2025. 6. 18.    parkjunhong77@gmail.com     최초 작성
          * </pre>
          *
          * @param handleType
@@ -497,10 +504,10 @@ public class AuthorizedMetadataBuilder {
          * {@link AuthorizedField#name()}에 해당하는 값을 설정합니다.<br>
          * 
          * <pre>
-         * [개정이력]
-         *      날짜        | 작성자    |    내용
-         * ------------------------------------------
-         * 2025. 6. 18.        parkjunhong77@gmail.com            최초 작성
+        * [개정이력]
+        *     날짜        | 작성자                   |   내용
+        * -----------------------------------------------------
+         * 2025. 6. 18.    parkjunhong77@gmail.com     최초 작성
          * </pre>
          *
          * @param name
@@ -540,10 +547,10 @@ public class AuthorizedMetadataBuilder {
          * {@link AuthorizedObjectMetadata} 객체를 생성합니다. <br>
          * 
          * <pre>
-         * [개정이력]
-         *      날짜        | 작성자    |    내용
-         * ------------------------------------------
-         * 2025. 6. 18.        parkjunhong77@gmail.com            최초 작성
+        * [개정이력]
+        *     날짜        | 작성자                   |   내용
+        * -----------------------------------------------------
+         * 2025. 6. 18.    parkjunhong77@gmail.com     최초 작성
          * </pre>
          *
          * @return
@@ -557,10 +564,10 @@ public class AuthorizedMetadataBuilder {
          * {@link AuthorizedFieldMetadata} Builder를 생성합니다. <br>
          * 
          * <pre>
-         * [개정이력]
-         *      날짜        | 작성자    |    내용
-         * ------------------------------------------
-         * 2025. 6. 19.        parkjunhong77@gmail.com            최초 작성
+        * [개정이력]
+        *     날짜        | 작성자                   |   내용
+        * -----------------------------------------------------
+         * 2025. 6. 19.    parkjunhong77@gmail.com     최초 작성
          * </pre>
          *
          * @param function
@@ -594,10 +601,10 @@ public class AuthorizedMetadataBuilder {
          * {@link AuthorizedObject}가 적용되는 데이터 유형을 설정합니다.<br>
          * 
          * <pre>
-         * [개정이력]
-         *      날짜        | 작성자    |    내용
-         * ------------------------------------------
-         * 2025. 6. 18.        parkjunhong77@gmail.com            최초 작성
+        * [개정이력]
+        *     날짜        | 작성자                   |   내용
+        * -----------------------------------------------------
+         * 2025. 6. 18.    parkjunhong77@gmail.com     최초 작성
          * </pre>
          *
          * @param type
